# Artidor

./: .gitignore  .gitleaks.toml  .markdownlint.json  .markdownlintignore  .npmrc  .semgrep.yml  AGENTS.md  CHECKLIST.md  CLAUDE.md  CODEOWNERS  Cargo.toml  GEMINI.md  HARNESS.md  IDEA.md  LICENSE  PERMISSIONS.md  PUBLISH.md  README-HARNESS-PACK.md  README.md  ROADMAP.md  RULES.md  SECURITY.md  biome.json  docker-compose.yml  err.txt  manifest.json  package.json  playwright.config.ts  skills-lock.json  test-output-116.txt  test-output-web.txt  test-output-web2.txt  test-output.txt  test-output2.txt  test-output3.txt  test-output4.txt  turbo.json  wrangler.jsonc
.agent/: RUNBOOK.md
.agent/PROMPTS/: bug-fix.md  code-review.md  feature-implementation.md
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bun-ci.yml  ci.yml  e2e.yml  release.yml  security.yml
.hermes/: transform-tab-current.tsx
.next/: trace  trace-build
.zed/: settings.json
apps/desktop/: Cargo.toml  README.md
apps/desktop-native/: Cargo.toml  README.md
apps/desktop-native/src/: dialogs.rs  main.rs  persist.rs  theme.rs
apps/desktop-native/src/ai/: mod.rs
apps/desktop-native/src/d2d/: context.rs  font.rs  mod.rs
apps/desktop-native/src/dialogs/: mod.rs
apps/desktop-native/src/export/: mod.rs
apps/desktop-native/src/media/: mod.rs
apps/desktop-native/src/playback/: mod.rs
apps/desktop-native/src/render/: mod.rs  viewport.rs
apps/desktop-native/src/state/: history.rs  mod.rs  persistence.rs  project.rs
apps/desktop-native/src/ui/: d2d_chrome.rs  d2d_gfx.rs  font.rs  footer.rs  gfx.rs  header.rs  layout.rs  mod.rs  projects.rs  tab_bar.rs  viewport_toolbar.rs  welcome.rs
apps/desktop-native/src/ui/ai/: mod.rs
apps/desktop-native/src/ui/assets/: effects.rs  mod.rs
apps/desktop-native/src/ui/inspector/: mod.rs
apps/desktop-native/src/ui/timeline/: mod.rs  playhead.rs  ruler.rs  track.rs
apps/desktop-native/src/window/: mod.rs  shortcuts.rs
apps/desktop-web/: Cargo.toml  README.md
apps/desktop-web/script/: setup
apps/desktop-web/src/: app.rs  theme.rs
apps/desktop-web/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-web/src-tauri/capabilities/: default.json
apps/desktop-web/src-tauri/icons/: icon.icns
apps/desktop-web/src-tauri/src/: lib.rs  main.rs
apps/desktop-web/src/media/: loader.rs
apps/desktop-web/src/playback/: engine.rs  mod.rs
apps/desktop-web/src/render/: viewport.rs
apps/desktop-web/src/state/: editor_state.rs  mod.rs  persistence.rs  project.rs
apps/desktop-web/src/ui/: footer.rs  header.rs
apps/desktop-web/src/ui/ai/: mod.rs
apps/desktop-web/src/ui/assets/: effects.rs
apps/desktop-web/src/ui/inspector/: mod.rs
apps/desktop-web/src/ui/timeline/: mod.rs  playhead.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/web/: .env.example  .tmp_out.txt  .tmp_test.mjs  Dockerfile  bunfig.toml  drizzle.config.ts  next.config.ts  package.json  tsconfig.json  tsconfig.test.json  wrangler.jsonc
docs/: 75-shapes-element.md  actions.md  am-basic-editing-tools.md  asset-library-research.ts.txt  asset-library.md  countries-search.md  davinci-resolve-color-reference.md  features-big-1.md  features-blueprint-2.md  features-blueprint-3.md  features-blueprint.md  keyframes.md  luxury-design-blueprint.md
docs/harness/: DEPENDENCY_DECISIONS.md  DEPENDENCY_POLICY.md  DOCUMENTATION_POLICY.md  README.md  agent-workflow.md  mcp-policy.md  metrics.md  release-and-rollback.md  security-model.md  testing-strategy.md  threat-model.md
docs/performance/: OPTIMIZATION_PLAN.md
docs/product/: WHATS_NEW_POLICY.md
docs/qa/: 2026-06-25-session-qa.md
docs/research/: P3-rendering-export-performance.md  alight-motion-effects-web-2026-07-11.md
features/3d-compositor-pipeline/: FEATURE.md  PLAN.md  RESEARCH.md  RISKS.md
features/_template/: FEATURE.md  PLAN.md  QA.md  RISKS.md  STATE.md  TODO.md
features/ai-chat-ux-improvements/: plan.md
features/ai-editing/: FEATURE.md  PLAN.md
features/ai-provider-minimax-models/: plan.md
features/bugfix-polish-2026-07-17/: PLAN.md  RISKS.md  TODO.md
features/camera-track/: FEATURE.MD  QA.MD  STATE.MD  TODO.MD
features/camera-track-done/: FEATURE.MD  MAINTENANCE.MD  PLAN.MD  RISKS.MD  RULES.MD  STATE.MD
features/d2d-chrome-web-match/: plan.md
features/desktop-native-home-parity/: plan.md
features/desktop-native-win32/: FEATURE.md  PLAN.md  RISKS.md  STATE.md
features/desktop-tauri-migration/: FEATURE.md  PLAN.md  RISKS.md
features/desktop-ui-parity/: FEATURE.md  PLAN.md  RISKS.md
features/editor-performance-phase-2/: FEATURE.md  PLAN.md  QA.md  RISKS.md  STATE.md
features/editor-session-persistence-done/: FEATURE.MD  PLAN.MD  (+2 more)
forme/: rules.txt
logs/: .fde4d136755f50a7065334fbc5aeee0134300eff-audit.json
patches/: @content-collections%2Fcore@0.15.2.patch  gray-matter@4.0.3.patch  zod@4.3.6.patch
rust/: README.md
rust/wasm/: Cargo.toml  README.md
rust/wasm/pkg/: artidor_wasm.d.ts  artidor_wasm.js  artidor_wasm_bg.js  artidor_wasm_bg.wasm  artidor_wasm_bg.wasm.d.ts  auto-init.js  package.json
rust/wasm/src/: compositor.rs  effects.rs  gpu.rs  masks.rs  wasm.rs
scripts/: agent-guard.mjs  capture-editor-screenshot.ts  create-feature.mjs  harness-check.mjs  wasm-package-init.js  whats-new-check.mjs
stabilize/: BUGS.md  CRITICAL.MD  MAINTENANCE.MD  PROBLEM.MD  QA.md  README.md  REGRESSIONS.md  RULES.MD  STATE.MD  TODO.MD
test-results/: .last-run.json
tests/: 02-tabs.spec.ts  03-bugfixes.spec.ts  04-critical-buttons.spec.ts  05-preset-flow.spec.ts  06-layer-style-effect.spec.ts  07-freedraw-vector.spec.ts  08-speed-frame-interp.spec.ts  09-plugin.spec.ts  10-popout.spec.ts  11-overflow.spec.ts  12-previews.spec.ts  13-responsive.spec.ts  14-screenshots.spec.ts  15-click-all-buttons.spec.ts  diag-toolmode.spec.ts  helpers.ts  performance.spec.ts  smoke.spec.ts
(+1187 files in other folders)
