[package]
name = "artidor-desktop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "artidor"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
compositor = { version = "0.1.0", path = "../../rust/crates/compositor" }
gpu = { version = "0.1.0", path = "../../rust/crates/gpu" }
effects = { version = "0.1.0", path = "../../rust/crates/effects" }
masks = { version = "0.1.0", path = "../../rust/crates/masks" }
artidor-time = { version = "0.1.0", path = "../../rust/crates/time" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp"] }
pollster = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
smallvec = "1"
