[package]
name = "artidor-wasm"
version = "0.2.5"
edition = "2024"
description = "Shared video editor logic compiled to WebAssembly"
repository = "https://github.com/Aofsnorth/Artidor"
license = "MIT"

[lib]
path = "src/wasm.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bridge = { version = "0.1.0", path = "../crates/bridge" }
compositor = { version = "0.1.0", path = "../crates/compositor" }
console_error_panic_hook = "0.1.7"
effects = { version = "0.1.0", path = "../crates/effects" }
gpu = { version = "0.1.0", path = "../crates/gpu", features = ["wasm"] }
js-sys = "0.3.93"
masks = { version = "0.1.0", path = "../crates/masks" }
num-traits = "0.2.19"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
time = { version = "0.1.0", path = "../crates/time", features = ["wasm"] }
wasm-bindgen = "0.2.116"
wasm-bindgen-futures = "0.4.66"
web-sys = { version = "0.3.93", features = ["OffscreenCanvas", "HtmlCanvasElement", "CanvasRenderingContext2d", "Document", "Window"] }

[features]
default = ["wasm"]
wasm = []

# wasm-pack bundles its own (older) `wasm-opt`, which defaults to the WebAssembly
# MVP feature set and aborts with "Only 1 table definition allowed in MVP".
# Recent Rust toolchains enable the reference-types / multivalue / bulk-memory
# proposals by default for wasm32-unknown-unknown, and reference-types emits a
# second table. Tell wasm-opt to accept those proposals so it still optimizes the
# module — the alternative (`wasm-opt = false`) would ship an unoptimized binary.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    '-O',
    '--enable-reference-types',
    '--enable-bulk-memory',
    '--enable-multivalue',
    '--enable-mutable-globals',
    '--enable-sign-ext',
    '--enable-nontrapping-float-to-int',
]
