[package]
name = "artidor-desktop-tauri"
version = "0.1.0"
description = "Artidor desktop app — Tauri shell with native WGPU rendering"
edition = "2024"
license = "MIT"

[lib]
name = "artidor_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "io-util"] }

# Artidor native crates — compositor for WGPU rendering
compositor = { path = "../../../rust/crates/compositor" }
gpu = { path = "../../../rust/crates/gpu" }
effects = { path = "../../../rust/crates/effects" }
masks = { path = "../../../rust/crates/masks" }

[features]
# This feature is used for production builds or when `devUrl` points to the
# filesystem and the built-in dev server is not available.
custom-protocol = ["tauri/custom-protocol"]
